Some rough FAQ additions for Emacs 24
* doc/misc/faq.texi (New in Emacs 24): New section.
(Packages that do not come with Emacs): Mention M-x list-packages.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-20  Glenn Morris  <rgm@gnu.org>
+
+	* faq.texi (New in Emacs 24): New section.
+	(Packages that do not come with Emacs): Mention M-x list-packages.
+
 2012-04-13  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Replace non-portable use of $< in emacs-gnutls rules.
