--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-20  Eli Zaretskii  <eliz@gnu.org>
+
+	* version.el (emacs-bzr-version, emacs-bzr-get-version): Doc fixes.
+
 2012-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* electric.el (electric-indent-post-self-insert-function): Check that
