--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-20  Chong Yidong  <cyd@gnu.org>
+
+	* process.c (wait_reading_process_output): If EIO occurs on a pty,
+	set the status to "failed" and ensure that sentinel is run.
+
 2012-04-18  Glenn Morris  <rgm@gnu.org>
 
 	* process.c (Fset_process_inherit_coding_system_flag)
