--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-20  Glenn Morris  <rgm@gnu.org>
+
+	* MORE.STUFF: General update.  Mention list-packages.
+	Remove many old/outdated URLs.
+
 2012-04-02  Alan Mackenzie  <acm@muc.de>
 
 	* NEWS: Add CC Mode entries.
