* etc/CONTRIBUTE: Expand a bit on copyright assignments.

--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-20  Glenn Morris  <rgm@gnu.org>
 
+	* CONTRIBUTE: Expand a bit on copyright assignments.
+
 	* MORE.STUFF: General update.  Mention list-packages.
 	Remove many old/outdated URLs.
 
