* lisp/server.el (server-execute): Respect initial-buffer-choice if it is a string and there are no files to open. (server-create-window-system-frame, server-create-tty-frame): Don't switch buffers here.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -53,6 +53,10 @@ automatically when setting `imagemagick-types-inhibit'.
 *** Setting `imagemagick-types-inhibit' to t now disables the use of
 ImageMagick to view images, set
 
+** String values for `initial-buffer-choice' also apply to emacsclient
+frames, if emacsclient is only told to open a new frame without
+specifying any file to visit or expression to evaluate.
+
 
 * Editing Changes in Emacs 24.2
 
