Fix emacsclient/server behavior under --without-x.
* lib-src/emacsclient.c (main): Send -tty to Emacs under more circumstanced (Bug#8314).

* lisp/server.el (server-process-filter): Only try to open a window
system frame if compiled with graphical support (Bug#8314).

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -2,6 +2,7 @@
 
 	* emacsclient.c (decode_options): Move -t -n corner case handling
 	into server.el (Bug#11102).
+	(main): Send -tty to Emacs under more circumstanced (Bug#8314).
 
 2012-04-18  Paul Eggert  <eggert@cs.ucla.edu>
 
