--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -4,6 +4,8 @@
 	is a string and there are no files to open (Bug#2825).
 	(server-create-window-system-frame, server-create-tty-frame):
 	Don't switch buffers here.
+	(server-process-filter): Only try to open a window system frame if
+	compiled with graphical support (Bug#8314).
 
 2012-04-20  Dan Nicolaescu  <dann@gnu.org>
 
